--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 hibernate.driver_class=org.postgresql.Driver
 hibernate.connection.url=jdbc:postgresql://localhost:5432/bookshop
-hibernate.connection.username=postgres
-hibernate.connection.password=postgres
+hibernate.connection.username=vlad
+hibernate.connection.password=
 
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
